# Dictionary

./: CMakeLists.txt  README.md  dict.db  dictionary-view.glade  insert.c  select.c
